[gd_scene load_steps=4 format=3 uid="uid://dck8bjw5v44ut"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_tafr1"]
[ext_resource type="Texture2D" uid="uid://cv10y4a56tc2u" path="res://assets/menu/play_button.png" id="2_yp6sw"]
[ext_resource type="AudioStream" uid="uid://6ios2p8kav0n" path="res://assets/audio/music/Main Menu Theme.mp3" id="3_7mjv2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tafr1")

[node name="TitleContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 22.0
offset_right = 168.0
offset_bottom = 62.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
text = "Washington's Crossing"

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -44.0
offset_right = 216.0
offset_bottom = 44.0
grow_vertical = 2
texture_normal = ExtResource("2_yp6sw")

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7mjv2")
volume_db = -10.352
autoplay = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="finished" from="MenuMusic" to="." method="_on_menu_music_finished"]
